<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- To determine the weather data location preference -->
    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:summary="@string/pref_location_default"
        android:title="@string/pref_location_label" />

    <!-- To determine the unite measurement system-->
    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:summary="@string/pref_units_metric"
        android:title="@string/pref_units_label" />

    <!-- To determine if the user want to get notifications or not-->
    <CheckBoxPreference
        android:defaultValue="@bool/show_notifications_by_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_not_enabled"
        android:summaryOn="@string/pref_enable_notifications_enabled"
        android:title="@string/pref_enable_notifications_label" />

</PreferenceScreen>